[project]
name = "claude-quota-warmer"
version = "0.1.0"
description = "Periodically send a real Claude Code request to keep the 5h quota window warm."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tian" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "apscheduler>=3.10",
    "pydantic>=2.6",
    "python-dateutil>=2.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
claude-quota-warmer = "backend.main:run_cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
